--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "reduxcrud",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http//uthayasakthivel.github.io/react-tool-kit-redux-crud",
+  "homepage": "http://github.io.uthayasakthivel/react-tool-kit-redux-crud",
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.16.5",
